Added conditional for IE to execute HTML5 enabling script

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8" />
+    <meta charset="UTF-8" />
 	<meta name="description" content="Development, music, technology, ramblings and more." />
 	<meta name="author" content="Fred McHale" />
 	<meta name="author" content="code, development, technology, mobile, mobile development, ruby, jruby, rails, ruby on rails, agile, TDD, BDD, java, groovy, android, music, movies"/>
@@ -13,10 +13,13 @@
 	<script type="text/javascript" src="scripts/binaryfever.js"></script>
 	<link rel="stylesheet" href="styles/binaryfever3.css" type="text/css" /> 
 	<title>binaryFever</title>
+	<!--[if lt IE 9]>
+		<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+	<![endif]-->
 	<script type="text/javascript">
-	//Google tracker
-	var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-	document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+		//Google tracker code
+		var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+		document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
 	</script>
 	<script type="text/javascript">
 	try{
