Added Comment and removed old CSS file.

--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
 	<script type="text/javascript" src="scripts/jquery-ui-1.8.15.custom/js/jquery-ui-1.8.15.custom.min.js"></script> 
 	<script type="text/javascript" src="scripts/binaryfever.js"></script>
-	<link rel="stylesheet" href="styles/binaryfever3.css" type="text/css" /> 
+	<link rel="stylesheet" href="styles/binaryfever.css" type="text/css" /> 
 	<title>binaryFever</title>
+    <!-- Determines if browser is IE less than 9 -->
 	<!--[if lt IE 9]>
 		<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
